<resources>
    <string name="app_name">DemoVizuo</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_globiots_system">Việt Nam - Globiots System</string>
    <string name="btn_forget">Forgot your password?</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
</resources>
