<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#263238"
    tools:context="com.example.user.demovizuo.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:src="@drawable/logo_vizuo_tran"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_user_name_login"
            style="@style/edittextLogin"
            android:textColor="@color/main_text_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="@dimen/pad_20dp"
            android:hint="@string/hint_email"
            android:maxLength="50"
            app:met_iconPadding="@dimen/pad_1dp"
            app:met_clearButton="false"
            app:met_iconLeft="@drawable/ic_email_white_24dp"
            app:met_maxCharacters="50"
            app:met_primaryColor="@color/main_blue"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/main_text_white"
            app:met_floatingLabelText="@string/hint_email"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_password_login"
            style="@style/edittextLogin"
            android:textColor="@color/main_text_white"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:textCursorDrawable="@drawable/text_cursor_cyan"

            app:met_clearButton="false"
            app:met_iconPadding="@dimen/pad_1dp"
            app:met_iconLeft="@drawable/ic_lock_white_24dp"
            app:met_maxCharacters="50"
            app:met_primaryColor="@color/main_blue"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/main_text_white"
            app:met_floatingLabelText="@string/hint_password"/>


        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/input_layout_email"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginLeft="48dp"-->
            <!--android:layout_marginRight="48dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/input_email"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableLeft="@drawable/ic_email_white_24dp"-->
                <!--android:hint="@string/hint_email"/>-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/input_layout_password"-->
            <!--android:layout_marginLeft="48dp"-->
            <!--android:layout_marginRight="48dp"-->
            <!--android:layout_marginBottom="32dp"-->

            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/input_password"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:drawableLeft="@drawable/ic_lock_white_24dp"-->
                <!--android:hint="@string/hint_password"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="@drawable/signin"
            android:text="@string/btn_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGlobiotsSystem"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="@drawable/globiots"

            android:text="@string/btn_globiots_system"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/btnForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#90212121"
        android:text="@string/btn_forget"
        android:textAllCaps="false"
        android:textColor="#90ffffff" />

</RelativeLayout>
